--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -39,8 +39,7 @@
   }
 }
 
-.latex-font {
-  font-family: 'Times New Roman', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  font-size: 1em;
-  color: #333;
+.katex-display{
+  text-align: left;
+  margin: 0 auto;
 }
