--- a/myapp/src/components/NC/D to B Conversion/DIntToBase.css
+++ b/myapp/src/components/NC/D to B Conversion/DIntToBase.css
@@ -15,7 +15,7 @@
     /* height: 200vh; */
 }
 .d2b-conversion-table thead {
-    background-color: #8e9aaf;
+    background-color: #6c757d;
     /* color: white; */
 }
 
@@ -23,7 +23,10 @@
     padding: 12px 16px;
     text-align: center;
     font-weight: 500;
-    color: #333;
+    /* color: #333; */
+}
+.d2b-conversion-table td{
+    color:#333;
 }
 
 .d2b-conversion-table th {
