Updated the IEEE files

--- a/myapp/src/components/IEEE/DecimalToIeeeSingle.css
+++ b/myapp/src/components/IEEE/DecimalToIeeeSingle.css
@@ -1,4 +1,4 @@
-/* src/components/IeeeSinglePrecision.css */
+/* src/components/IeeeSinglePrecision.css
 
 .ieee-container {
     font-family: Arial, sans-serif;
@@ -75,4 +75,4 @@ h2 {
 label {
     font-weight: bold;
     color: #333;
-}
+} */
