--- a/myapp/src/components/IEEE/ConverterStyles.css
+++ b/myapp/src/components/IEEE/ConverterStyles.css
@@ -7,7 +7,7 @@
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
-
+/* 
 h1 {
     font-size: 24px;
     margin-bottom: 20px;
@@ -16,7 +16,7 @@ h1 {
 h2 {
     font-size: 20px;
     color: #007acc;
-}
+} */
 
 .conversion-step {
     margin-top: 20px;
@@ -47,7 +47,7 @@ button:hover {
     background-color: #005f99;
 }
 
-p {
+/* p {
     font-size: 16px;
     color: #333;
-}
+} */
