--- a/myapp/src/components/IEEE/ConverterStyles.css
+++ b/myapp/src/components/IEEE/ConverterStyles.css
@@ -1,12 +1,5 @@
 /* src/ConverterStyles.css */
-.ieee-container {
-    width: 80%;
-    margin: auto;
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-}
+
 /* 
 h1 {
     font-size: 24px;
@@ -17,7 +10,7 @@ h2 {
     font-size: 20px;
     color: #007acc;
 } */
-
+/* 
 .conversion-step {
     margin-top: 20px;
     padding: 15px;
@@ -45,7 +38,7 @@ button {
 
 button:hover {
     background-color: #005f99;
-}
+} */
 
 /* p {
     font-size: 16px;
